tests/negative/generics/multiple_constraints_neither.orng
trait A { virtual fn a(&self) -> Int }
trait B { virtual fn b(&self) -> Int }

fn use_both[T: A + B](x: &T) -> Int {
    x.>a() + x.>b()
}

fn main() -> Int {
    use_both[Int](&386)
}